# crow_webserver

./: .gitignore  README.md
src/: CMakeLists.txt  main copy.cpp  main.cpp
src/includes/: rz_config.hpp  rz_dbmanager.cpp  rz_dbmanager.hpp  rz_helpers.hpp  rz_middleware.hpp
static/: index.html  main-PTZPGCW4.js  styles-JSBVU3L6.css  test.txt
templates/: template.html
